<resources>
    <string name="app_name">健康配</string>
    <string name="proj_scheme">hpay</string>
    <string name="proj_scheme_host">payment</string>
    <string name="proj_scheme_home_main">home</string>
    <string name="proj_scheme_account_trade">trade</string>
    <string name="main_func_home">首頁</string>
    <string name="title_home">  </string>
    <string name="title_mall">健康商城</string>
    <string name="title_account">會員中心</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="button_confirm">確認</string>
    <string name="button_ok">確定</string>
    <string name="button_cancel">取消</string>
    <string name="copy">複製</string>
    <string name="cut">裁切</string>
    <string name="camera">照相</string>
    <string name="gallery">圖庫</string>
    <string name="sex">性別</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="birthday">生日</string>
    <string name="birthday_hint">請輸入您的生日ex:2000-08-08</string>
    <string name="login">登入</string>
    <string name="logout">登出</string>
    <string name="register">註冊</string>
    <string name="account_rule">會員使用條款</string>
    <string name="Store_name">店名：醫電數位轉型股份有限公司</string>
    <string name="Store_tel">電話：02-2658-1678</string>
    <string name="welcome_back">歡迎回來</string>
    <string name="mobile_number">手機號碼</string>
    <string name="home_number">家裡號碼</string>
    <string name="home_number_hint">請輸入您家裡的電話號碼</string>
    <string name="mobile_number_hint">請輸入您的手機號碼</string>
    <string name="password">密碼</string>
    <string name="password_hint">請輸入您的密碼</string>
    <string name="forget_password"><u>忘記密碼?</u></string>
    <string name="user_rule"><u>使用者條款與須知</u></string>
    <string name="welcome_register">歡迎加入會員</string>
    <string name="name">姓名</string>
    <string name="name_hint">請輸入您的姓名</string>
    <string name="email">Email信箱</string>
    <string name="email_hint">請輸入您的Email信箱</string>
    <string name="mobile_number_hint_for_register">請輸入您的手機號碼作為往後的登入帳號</string>
    <string name="password_hint_for_register">請輸入6–12位英數密碼</string>
    <string name="invite_code">邀請碼</string>
    <string name="invite_code_hint">請輸入好友邀請碼</string>
    <string name="register_agree_check_title">我同意以此資料註冊會員，並同意</string>
    <string name="button_account_rule"><font color="#202020">我同意以此資料註冊會員，並同意</font><font color="#00ADAD"><u>會員使用條款</u></font></string>
    <string name="register_fail">註冊失敗</string>
    <string name="account_already_exist">帳號已存在</string>
    <string name="button_register">註冊會員</string>
    <string name="err_field_empty">請輸入%1$s</string>
    <string name="err_field_format">%1$s格式錯誤</string>
    <string name="err_point_type">%1$d格式錯誤</string>
    <string name="err_exception">格式異常</string>
    <string name="money_string">$%1$d</string>
    <string name="point_value">%1$d點</string>
    <string name="point_remain_note">%1$s即將到期點數%2$d點</string>
    <string name="point_remain_zero">—</string>
    <string name="failmsg"><strong>註冊失敗</strong></string>
    <string name="forget_password_title">忘記密碼</string>
    <string name="reset_password_title">請重新設定您的新密碼</string>
    <string name="identity_code">驗證碼</string>
    <string name="identity_code_hint">請輸入驗證碼</string>
    <string name="button_identity_code">獲取驗證碼</string>
    <string name="new_password">新密碼</string>
    <string name="new_password2">再次輸入新密碼</string>
    <string name="new_password2_hint">請輸入新密碼</string>
    <string name="button_send">送出</string>
    <string name="minute_seconds">%1$02d：%2$02d</string>
    <string name="button_modify_data">修改資料</string>
    <string name="account_listitem_data">會員資料</string>
    <string name="account_listitem_record">交易記錄</string>
    <string name="account_listitem_point">健康Point</string>
    <string name="account_listitem_rule">使用者條款</string>
    <string name="account_listitem_qa">常見問題</string>
    <string name="account_listitem_member_delete">刪除帳號</string>
    <string name="account_qa">使用者消費權益及說明</string>
    <string name="point_get">獲取紅利</string>
    <string name="point_cancel">取消紅利</string>
    <string name="point_used">使用紅利</string>
    <string name="point_record">點數記錄</string>
    <string name="point_note">註:最多顯示一年之內的資料</string>
    <string name="point_record_not_found">暫無點數記錄</string>
    <string name="trade_record_not_found">暫無交易記錄</string>
    <string name="trade_main_item1">付款交易記錄</string>
    <string name="trade_main_item2">健康商城訂單</string>
    <string name="coupon_0">優惠券</string>
    <string name="coupon_1">門市優惠券</string>
    <string name="coupon_2">健康商城優惠券</string>
    <string name="trade_my_order">我的訂單</string>
    <string name="scan_pay">掃描支付</string>
    <string name="scan_note">對準條碼至框內即可掃描</string>
    <string name="buy_car">購物車</string>
    <string name="buy_car1">行動支付</string>
    <string name="recommend_code">推薦碼</string>
    <string name="recommend_coupon">優惠券</string>
    <string name="recommend_record">推薦好友紀錄</string>
    <string name="recommend_info1"><font color="#f00000">邀請好友下載</font><font color="#00ADAD">健康配APP</font></string>
    <string name="recommend_info2"><font color="#00ADAD">您與好友皆可獲得</font><font color="#f00000">100元健康point</font></string>
    <string name="recommend_rule">推薦條款與細則說明</string>
    <string name="your_recommend_code">你的推薦碼</string>
    <string name="invite_friend">邀請朋友</string>
    <string name="invited_friends_list">成功邀請朋友</string>
    <string name="people_count">%1$d位</string>
    <string name="invite_friend_message">%1$s 已贈送100元健康point給您，只要註冊健康配APP時輸入推薦碼%2$s...</string>
    <string name="recommended_phone">被推薦人電話：</string>
    <string name="recommend_award">推薦奬勵：</string>
    <string name="register_date">加入日期：</string>
    <string name="no_recommend_data">您沒有推薦好友紀錄，趕快去推薦好友吧！</string>
    <string name="award_message">%1$d元%2$s</string>
    <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
    <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
    <string name="pref_key_front_camera_preview_size" translatable="false">fcpvs</string>
    <string name="pref_key_front_camera_picture_size" translatable="false">fcpts</string>
    <string name="pref_key_camerax_rear_camera_target_resolution" translatable="false">crctas</string>
    <string name="pref_key_camerax_front_camera_target_resolution" translatable="false">cfctas</string>
    <string name="pref_key_camera_live_viewport" translatable="false">clv</string>
    <string name="msg_image_from">請選擇照片來源</string>
    <string name="pref_title_info_hide" translatable="false">Hide detection info</string>
    <string name="pref_key_info_hide" translatable="false">ih</string>
    <string name="pdData">收件資訊</string>
    <string name="pd_01"><font color="#FF0000">*</font>配送方式</string>
    <string name="pd_02">收件人同會員資料</string>
    <string name="pd_03"><font color="#FF0000">*</font>收件人姓名</string>
    <string name="pd_04"><font color="#FF0000">*</font>收件人地址</string>
    <string name="pd_05"><font color="#FF0000">*</font>手機號碼</string>
    <string name="pd_06">E-MAIL</string>
    <string name="pd_07">請輸入收件人的姓名</string>
    <string name="pd_08">地址</string>
    <string name="pd_09">請輸入收件人的手機號碼</string>
    <string name="pd_10">請輸入收件人的E-MAIL</string>
    <string name="pd_11"><font color="#FF0000">優惠券</font></string>
    <string name="pd_14">紅利點折抵，本單可折抵 $</string>
    <string name="pd_15"><font color="#FF0000">*</font> 配送開立發票方式</string>
    <string name="pd_16">商品合計  </string>
    <string name="pd_17">運費  </string>
    <string name="pd_18">優惠券折扣  </string>
    <string name="pd_19">紅利點折扣  </string>
    <string name="pd_21">發票資料</string>
    <string name="pd_22">響應電子化發票，發票將寄送至您的E-MAIL。提醒您，發票一旦開立，不得任意更改或改開發票。
</string>
    <string name="pd_24">說明綁定後，即可自動將發票存入財政部手機條碼。如因輸入資料錯誤所致損害，本公司恕不負責。</string>
    <string name="pd_25"> 公司行號抬頭</string>
    <string name="pd_26">   統一編號</string>
    <string name="pd_2501">   請輸入公司行號抬頭</string>
    <string name="pd_2601">   請輸入統一編號</string>
</resources>